crates/biome_cli/tests/snapshots/main_cases_monorepo/object_syntax_plugins_in_extended_config_missing_plugin_reports_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/object_syntax_plugins_in_extended_config_missing_plugin_reports_error/packages/mobile/src/file.js'
```

## `biome.json`

```json
{ "root": true }
```

## `packages/mobile/biome.json`

```json
{ "root": false, "extends": ["../tools/biome.shared.jsonc"] }
```

## `packages/mobile/src/file.js`

```js
Object.assign({}, a, b);

```

## `packages/tools/biome.shared.jsonc`

```jsonc
{ "plugins": [{ "path": "./biome-plugins/no-object-assign.grit", "resolutionKind": "config" }], "linter": { "enabled": true } }
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome exited because the configuration resulted in errors. Please fix them.
  


```

# Emitted Messages

```block
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Error(s) during loading of plugins:
    Biome couldn't find the plugin file <TEMP_DIR>/object_syntax_plugins_in_extended_config_missing_plugin_reports_error/packages/tools/biome-plugins/no-object-assign.grit.
  

```
