crates/biome_cli/tests/snapshots/main_cases_monorepo/plugins_in_child_config_with_extends_root.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/plugins_in_child_config_with_extends_root/packages/mobile/src/file.js'
```

## `biome.json`

```json
{
  "linter": {
    "enabled": true
  }
}
```

## `packages/mobile/biome.json`

```json
{
  "extends": "//",
  "plugins": ["./biome-plugins/no-object-assign.grit"],
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "recommended"
    }
  }
}
```

## `packages/mobile/biome-plugins/no-object-assign.grit`

```grit
`$fn($args)` where {
    $fn <: `Object.assign`,
    register_diagnostic(
        span = $fn,
        message = "Prefer object spread instead of Object.assign()",
        severity = "warn"
    )
}
```

## `packages/mobile/src/file.js`

```js
const merged = Object.assign({}, a, b);

```

# Emitted Messages

```block
packages/mobile/src/file.js:1:16 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Prefer object spread instead of Object.assign()
  
  > 1 │ const merged = Object.assign({}, a, b);
      │                ^^^^^^^^^^^^^
    2 │ 
  

```

```block
packages/mobile/src/file.js:1:7 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable merged is unused.
  
  > 1 │ const merged = Object.assign({}, a, b);
      │       ^^^^^^
    2 │ 
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend merged with an underscore.
  
    1   │ - const·merged·=·Object.assign({},·a,·b);
      1 │ + const·_merged·=·Object.assign({},·a,·b);
    2 2 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 warnings.
```
