crates/biome_cli/tests/snapshots/main_cases_monorepo/should_disable_formatter_via_cli_for_non_extending_nested_project.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 520
expression: redactor(content)
---
## `packages/non-extending/biome.json`

```json
{
  "root": false,
  "linter": {
    "enabled": false
  }
}
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": true
  },
  "linter": {
    "enabled": false
  }
}
```

## `packages/extending/biome.json`

```json
{
  "root": false,
  "extends": "//"
}
```

## `packages/extending/file.js`

```js
let  abc  = 123 ;

```

## `packages/non-extending/file.js`

```js
let  abc  = 123 ;

```

# Emitted Messages

```block
Checked 5 files in <TIME>. No fixes applied.
```
