crates/biome_cli/tests/snapshots/main_cases_monorepo/should_error_for_nested_config_with_members.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "members": ["app/"]
}
```

## `app/biome.json`

```json

{
    "members": ["nested/app/"]
}

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
app/biome.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2 1 │   {
    3   │ - ····"members":·["nested/app/"]
      2 │ + → "members":·["nested/app/"]
    4 3 │   }
    5 4 │   
  

```

```block
biome.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2 1 │   {
    3   │ - ····"members":·["app/"]
      2 │ + → "members":·["app/"]
    4 3 │   }
    5 4 │   
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 2 errors.
```
