crates/biome_cli/tests/snapshots/main_cases_monorepo/should_fail_for_nested_roots.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format '<TEMP_DIR>/should_fail_for_nested_roots'
```

## `biome.json`

```json
{
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  }
}
```

## `packages/lib/biome.json`

```json
{
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  }
}
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome exited because the configuration resulted in errors. Please fix them.
  


```

# Emitted Messages

```block
<TEMP_DIR>/should_fail_for_nested_roots/packages/lib/biome.json configuration ━━━━━━━━━━━━━━━━━━━━

  × Found a nested root configuration, but there's already a root configuration.
  
  i The other configuration was found in <TEMP_DIR>/should_fail_for_nested_roots.
  
  i Use the migration command from the root of the project to update the configuration.
  
  $ biome migrate --write
  

```
